# tdos

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  cosign.pub  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
files/justfiles/: syke.just
recipes/: common.yml  desktop.yml  laptop.yml  recipe-laptop.yml  recipe.yml
recipes/roles/: common.yml  desktop.yml  laptop.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  test_runner.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
